mule-user-guide/v/3.7/batch-job-instance-id.adoc
= 批量作业实例ID
:keywords: connectors, anypoint, studio, esb, batch, batch processing

处理 link:/mule-user-guide/v/3.7/batch-processing[批量]的用户经常需要在批处理作业的执行阶段确定批处理作业的实例ID。

*Note*：此功能仅适用于Mule 3.7和更新版本。

批处理作业实例ID对于：

* 将本地作业实例ID传递给外部系统以引用和管理数据
* 改进作业的自定义日志记录
* 为有意义的事件发送电子邮件或短信通知

== 示例

Mule通过密钥`batchJobInstanceId`的流变量公开批作业实例ID。该流量变量在输入阶段的开始处可用。流量变量也可用于每个步骤和完成阶段。

示例工作：

image:batch.png[批量]

正如你看到这份工作非常简单。在其每个阶段中，作业调用一个子流，记录以下MEL表达式的输出：

[source, code, linenums]
----
#[flowVars[‘batchJobInstanceId’]]
----

日志输出产生以下内容 - 请注意作业实例ID显示为的第二个块：

org.mule.api.processor.LoggerMessageProcessor：作业实例ID是：ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

[source, code, linenums]
----
INFO 2015-05-08 18:18:09,599 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting input phase

INFO 2015-05-08 18:18:09,603 [[batch].HTTP_Listener_Configuration.worker.01] org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

INFO 2015-05-08 18:18:09,603 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Input phase completed

INFO 2015-05-08 18:18:09,608 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Starting loading phase for instance 'ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d' of job 'batchBatch'

INFO 2015-05-08 18:18:09,610 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.queue.BatchQueueLoader: Finished loading phase for instance ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d of job batchBatch. 1 records were loaded

INFO 2015-05-08 18:18:09,615 [[batch].HTTP_Listener_Configuration.worker.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Started execution of instance 'ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d' of job 'batchBatch'

INFO 2015-05-08 18:18:09,624 [batch-job-batchBatch-work-manager.01] org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

INFO 2015-05-08 18:18:09,643 [batch-job-batchBatch-work-manager.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Starting execution of onComplete phase for instance ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d of job batchBatch

INFO 2015-05-08 18:18:09,644 [batch-job-batchBatch-work-manager.01] org.mule.api.processor.LoggerMessageProcessor: Job Instance Id is: ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d

INFO 2015-05-08 18:18:09,644 [batch-job-batchBatch-work-manager.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Finished execution of onComplete phase for instance ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d of job batchBatch

INFO 2015-05-08 18:18:09,644 [batch-job-batchBatch-work-manager.01] com.mulesoft.module.batch.engine.DefaultBatchEngine: Finished execution for instance 'ba01e1a0-f5c7-11e4-9414-10ddb1daeb6d' of job 'batchBatch'. Total Records processed: 1. Successful records: 1. Failed Records: 0
----

== 另请参阅

在{https://github.com/[GitHub]上托管的* 查看{{0}
*  link:http://blogs.mulesoft.com/batch-module-reloaded/[批量模块重新加载]
*  link:http://blogs.mulesoft.com/handle-errors-batch-job/[在你的批处理中处理错误...就像一个冠军！]
*  link:/anypoint-connector-devkit/v/3.8/building-a-batch-enabled-connector[Mule操作方法：构建批量启用的云连接器]
